z-index problem solved

--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -15,7 +15,6 @@
 
 .userContainer > .button:last-child {
   cursor: pointer;
-  z-index: 1000;
 }
 
 .active {
